# tmmax

./: .readthedocs.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: release-package.yml
benchmarks/: layer_size_benchmark.py  utils.py  vmap_array_length_benchmark.py
database_info/: README.md
docs/: requirements.txt
docs/examples/example_1_visualizing_nk_data/: visualizing_nk_data.ipynb
docs/examples/example_3_two_layer_w_coating/: two_layer_w_coating.ipynb
docs/examples/example_4_50_50_beam_splitter/: 50_50_beam_splitter.ipynb
docs/examples/example_5_thickness_sensitivity/: thickness_sensitivity.ipynb
docs/source/: citations.rst  conf.py  contributing.rst  credits.rst  faq.rst  index.rst  installation.rst  quickstart.rst  refs.bib
docs/source/_static/: custom.css
docs/source/examples/: 50_50_beam_splitter.ipynb  add_material_to_nk_database.ipynb  example1.rst  example2.rst  example3.rst  example4.rst  example5.rst  index.rst  two_layer_w_coating.ipynb  visualizing_nk_data.ipynb
docs/source/tmmax_workshops/: 1_python_introduction.ipynb  2_jax_introduction.ipynb  3_tmmax_introduction.ipynb  index.rst  itu.rst
docs/source/user_guide/: benchmarks.rst  code_structure.rst  index.rst  motivation.rst
examples/example_4_50_50_beam_splitter/: 50_50_beam_splitter.ipynb
examples/example_5_thickness_sensitivity/: thickness_sensitivity.ipynb
paper/: joss_paper.docx  paper.bib  paper.md  ~$ss_paper.docx  ~WRL1701.tmp
tests/: benchmark_utils.py  conftest.py  test_benchmark.py  test_errors.py  test_functions.py  test_imports.py  test_integration.py
tmmax/: __init__.py  analysis.py  cascaded_matmul.py  data.py  tmm.py
tmmax/nk_data/csv/: ITO.csv
tmmax/nk_data/numpy/: ITO.npy  Kischkat_Al2O3.npy  Kischkat_AlN.npy  Kischkat_Si3N4.npy  Kischkat_SiO2.npy  Kischkat_TiO2.npy
