[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tmmax"
authors = [{name = "Bahrem Serhat Danis", email = "bdanis23@ku.edu.tr"}]
dynamic = ["version", "description"]

# Clear metadata improves distribution and transparency
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["tmm", "optics", "photonics", "jax", "thin", "film", "dielectic", "vectorization", "jit", "coating"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Runtime dependencies
dependencies = [
  "jax>=0.5.0",
  "matplotlib>=3.10.0",
  "numpy>=2.2.2",
  "pandas>=2.2.3",
  "scipy>=1.15.1"
]

[project.optional-dependencies]
# Extras are recommended because they let people install only what they need:
# - tests → run the test suite
# - docs  → build the documentation
# - dev   → contribute with linting, formatting, and type-checking
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.5",
  "hypothesis>=6.0",
  "tmm==0.2.0",
  "matplotlib",
]

docs = [
  "sphinx==7.1.2",
  "sphinx-rtd-theme==1.3.0rc1",
  "sphinx-favicon==1.0.1",
  "furo==2025.7.19",
  "sphinxcontrib-bibtex",
  "nbsphinx",
  "nbconvert",
  "ipykernel"
]

dev = [
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.0"
]

[project.urls]
Homepage = "https://github.com/bahremsd/tmmax"
Repository = "https://github.com/bahremsd/tmmax"
Issues = "https://github.com/bahremsd/tmmax/issues"
Documentation = "https://tmmax.readthedocs.io/en/latest/"

[tool.coverage.run]
branch = true
source = ["tmmax"]

[tool.pytest.ini_options]
addopts = "-q --cov=tmmax --cov-report=term-missing"